--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,5 +48,9 @@ services:
       - MYSQL_USER=dbuser
       - MYSQL_PASSWORD=dbpassword
     volumes:
+      - mysql_data:/var/lib/mysql
       - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
     command: --default-authentication-plugin=mysql_native_password
+
+volumes:
+  mysql_data:
